Add usepackage for ifplatform

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -48,6 +48,7 @@ lualatex
 <%# Arial and LuaLaTeX -%>
 <%# -%>
 
+\usepackage{ifplatform}
 \ifwindows
 \setmainfont[Ligatures=TeX]{Arial}
 \setsansfont[Ligatures=TeX]{Arial}
@@ -96,6 +97,7 @@ lualatex
 <% break; case "ustutt": -%>
 <%# see also https://github.com/programming-journal/programming/blob/main/programming.cls -%>
 \makeatletter
+\usepackage{ifplatform}
 \ifwindows
 \setmainfont{XCharter}
 \setsansfont[Ligatures=TeX]{Arial}
