--- a/generators/app/templates/footnotes.preamble.en.tex
+++ b/generators/app/templates/footnotes.preamble.en.tex
@@ -7,7 +7,7 @@
    bottom,      % Footnotes appear always on bottom. This is necessary
                 % especially when floats are used
    stable,      % Make footnotes stable in section titles
-   perpage,     % Reset on each page
+   % perpage,     % Reset on each page
    %para,       % Place footnotes side by side of in one paragraph.
    %side,       % Place footnotes in the margin
    ragged,      % Use RaggedRight
@@ -15,6 +15,8 @@
    multiple,    % rearrange multiple footnotes intelligent in the text.
    %symbol,     % use symbols instead of numbers
 ]{footmisc}
+
+\counterwithout{footnote}{chapter} % Continuous numbering of footnotes across chapters
 
 \interfootnotelinepenalty=10000 % Verhindert das Fortsetzen von
                                 % Fussnoten auf der gegenüberligenden Seite
