Papersize question only for papers (and not thesis)

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -24,9 +24,10 @@
 %
 %  - easy print out on DIN A4 paper size
 %
-% One can configure a4 vs. letter in the LaTeX installation. So it is configuration dependend, what the paper size will be.
-% This option  present, because the current word template offered by Springer is DIN A4.
-% We accept that DIN A4 cause WTFs at persons not used to A4 in USA.
+% One can configure default page size (a4 vs. letter) in the LaTeX installation.
+% Thus, it is configuration dependend, what the paper size will be.
+% Having "a4paper" option present, the page size is set to A4.
+% Note that the current word template offered by Springer is DIN A4.
 %
 % "runningheads" führt zu folgendem:
 %
@@ -45,7 +46,7 @@
 <% break; case "acmart": -%>
 
 % Alternative to balance is the pbalance package (see https://ctan.org/pkg/pbalance), which sometimes works better
-\documentclass[<%= acmformat %>,<% if (acmreview) { %>review,<% } %>balance]{acmart}
+\documentclass[<%= acmformat %>,<%= papersize %>paper,<% if (acmreview) { %>review,<% } %>balance]{acmart}
 <% break; case "ieee": -%>
 
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
