Fix inclusion of acronyms

--- a/generators/app/templates/abbreviations.preamble.en.tex
+++ b/generators/app/templates/abbreviations.preamble.en.tex
@@ -14,4 +14,4 @@
 % Required to have the German chapter name % Source: https://tex.stackexchange.com/a/426392/9075
 \makeglossaries
 
-\input{acronyms}
+\input{abbreviations}
