Fix digncheck for scientific-thesis

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -207,25 +207,22 @@ In addition, we make the code appear more nice -%>
 \fi
 <% } -%>
 <% } -%>
-<% if (documentclass == 'scientific-thesis') { -%>
-
-\usepackage{setspace}
-\setstretch{1.2}
-<% } -%>
-<% if (documentclass == 'ustutt') { -%>
+<% if (isthesis) { -%>
 
 \usepackage{setspace}
 \setstretch{1.2}
 % Alternative package: https://ctan.org/pkg/leading
-
-% Zusatzliche Symbole (Text Companion font extension)
-\usepackage{textcomp}
 
 % Symbole Check und Cross
 \usepackage{pifont}
 \newcommand{\dingcheck}{\ding{51}}
 \newcommand{\dingcross}{\ding{55}}
 %for scaling see http://tex.stackexchange.com/a/130236/9075
+<% } -%>
+<% if (documentclass == 'ustutt') { -%>
+
+% Zusatzliche Symbole (Text Companion font extension)
+\usepackage{textcomp}
 
 \setkomafont{sectioning}{\normalfont\normalcolor\rmfamily\mdseries}
 \setkomafont{descriptionlabel}{\bfseries}
