--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -207,7 +207,7 @@ In addition, we make the code appear more nice -%>
 \fi
 <% } -%>
 <% } -%>
-<% if (isthesis) { -%>
+<% if (isThesis) { -%>
 
 \usepackage{setspace}
 \setstretch{1.2}
