--- a/generators/app/templates/thesis-additions.en.tex
+++ b/generators/app/templates/thesis-additions.en.tex
@@ -14,11 +14,19 @@
 \setcounter{secnumdepth}{3}    % Abbildungsnummerierung mit groesserer Tiefe
 \setcounter{tocdepth}{2}       % Inhaltsverzeichnis mit groesserer Tiefe
 
+<% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { -%>
+<% if (latexcompiler == "both") { -%>
+\ifluatex\else
+<% } -%>
 % Align page sizes
 % Seems to be required somehow
 \setlength{\pdfpageheight}{\paperheight}
 \setlength{\pdfpagewidth}{\paperwidth}
+<% if (latexcompiler == "both") { -%>
+\fi
+<% } -%>
 
+<% } -%>
 \raggedbottom     % Variable Seitenhoehen zulassen
 
 <% } -%>
