Fix inclusion of pdflscape package

--- a/generators/app/templates/floats.preamble.en.tex
+++ b/generators/app/templates/floats.preamble.en.tex
@@ -57,11 +57,13 @@
 \sidecaptionvpos{table}{c}
 \sidecaptionvpos{figure}{c}
 
+\floatstyle{ruled} %%???
+<% } -%>
+<% if (isThesis) { -%>
+
 %%%
 % Ermoeglicht es, Abbildungen um 90 Grad zu drehen
 % Alternatives Paket: rotating Allerdings wird hier nur das Bild gedreht, während bei lscape auch die PDF-Seite gedreht wird.
 %Das Paket lscape dreht die Seite auch nicht
 \usepackage{pdflscape}
-
-\floatstyle{ruled} %%???
 <% } -%>
