--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -14,7 +14,8 @@
 \cslet{P@MDback@footnoterule}{\footnoterule}
 \cslet{P@MDback@hrulefill}{\hrulefill}
 %
-\RequirePackage[charter,expert]{mathdesign}
+% "expert" option required commercial font - see https://tex.stackexchange.com/a/47479/9075
+\RequirePackage[chartert]{mathdesign}
 %
 \setlength{\fboxrule}{\csuse{P@MDback@fboxrule}}
 \setlength{\fboxsep}{\csuse{P@MDback@fboxsep}}
