--- a/generators/app/templates/todos.example.en.tex
+++ b/generators/app/templates/todos.example.en.tex
@@ -10,7 +10,7 @@ Bei \verb1\textmarker1 wird nur die Textfarbe geändert, da dies auch bei einige
 \textcomment{Markierter Text.}{Kommentar dazu.}
 <%- eexample %>
 
-<% if (isThesis) { -%>
+<% if (isThesis && (todo == "pdfcomment")) { -%>
 <%- bexample %>
 \hl{In Gelb hervorgehoben.}
 Provided indirectly by pdfcomment.sty (soulpos).
