--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -15,7 +15,7 @@
 \cslet{P@MDback@hrulefill}{\hrulefill}
 %
 % "expert" option required commercial font - see https://tex.stackexchange.com/a/47479/9075
-\RequirePackage[chartert]{mathdesign}
+\RequirePackage[charter]{mathdesign}
 %
 \setlength{\fboxrule}{\csuse{P@MDback@fboxrule}}
 \setlength{\fboxsep}{\csuse{P@MDback@fboxsep}}
