--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -1,4 +1,4 @@
-<% if (documentclass == 'ustutt') { %>
+<% if (documentclass == 'ustutt') { -%>
 %% Clashes with mathdesign
 % \PreventPackageFromLoading{amssymb,amsfont}
 <%# inspired by https://github.com/programming-journal/programming/blob/main/programming.cls -%>
@@ -14,7 +14,8 @@
 \cslet{P@MDback@footnoterule}{\footnoterule}
 \cslet{P@MDback@hrulefill}{\hrulefill}
 %
-\RequirePackage[charter,expert]{mathdesign}
+% "expert" option required commercial font - see https://tex.stackexchange.com/a/47479/9075
+\RequirePackage[charter]{mathdesign}
 %
 \setlength{\fboxrule}{\csuse{P@MDback@fboxrule}}
 \setlength{\fboxsep}{\csuse{P@MDback@fboxsep}}
@@ -48,8 +49,13 @@ lualatex
 <%# Arial and LuaLaTeX -%>
 <%# -%>
 
+\usepackage{ifplatform}
+\ifwindows
 \setmainfont[Ligatures=TeX]{Arial}
 \setsansfont[Ligatures=TeX]{Arial}
+\else
+\usepackage{helvet} % source: comment to https://tex.stackexchange.com/q/212357/9075
+\fi
 % Use Inconsolata font (https://ctan.org/pkg/inconsolata)
 % See https://tex.stackexchange.com/q/2241/9075 for a list of other alternative mono-spaced fonts
 % No [Ligatures=TeX], because we want " rendered as upquotes, not as typographic correct ones
@@ -87,12 +93,19 @@ lualatex
 <%  break; default: -%>
 <%# "default" font configuration -%>
 <% switch (documentclass) { case "ieee": -%>
+
 <%# Default font configuration of the IEEE template is used -%>
 <% break; case "ustutt": -%>
 <%# see also https://github.com/programming-journal/programming/blob/main/programming.cls -%>
 \makeatletter
+\usepackage{ifplatform}
+\ifwindows
 \setmainfont{XCharter}
 \setsansfont[Ligatures=TeX]{Arial}
+\else
+\usepackage{helvet} % source: comment to https://tex.stackexchange.com/q/212357/9075
+\setmainfont{XCharter}
+\fi
 % Use Inconsolata font (https://ctan.org/pkg/inconsolata)
 % See https://tex.stackexchange.com/q/2241/9075 for a list of other alternative mono-spaced fonts
 % No [Ligatures=TeX], because we want " rendered as upquotes, not as typographic correct ones
@@ -101,6 +114,7 @@ lualatex
 \setmonofont[StylisticSet={1,3}]{Inconsolatazi4}
 \makeatother
 <% break; case "scientific-thesis": -%>
+
 % TODO
 <% break; case "acmart": -%>
 <%# no special configuration required -%>
@@ -194,25 +208,22 @@ In addition, we make the code appear more nice -%>
 \fi
 <% } -%>
 <% } -%>
-<% if (documentclass == 'scientific-thesis') { -%>
-
-\usepackage{setspace}
-\setstretch{1.2}
-<% } -%>
-<% if (documentclass == 'ustutt') { -%>
+<% if (isThesis) { -%>
 
 \usepackage{setspace}
 \setstretch{1.2}
 % Alternative package: https://ctan.org/pkg/leading
-
-% Zusatzliche Symbole (Text Companion font extension)
-\usepackage{textcomp}
 
 % Symbole Check und Cross
 \usepackage{pifont}
 \newcommand{\dingcheck}{\ding{51}}
 \newcommand{\dingcross}{\ding{55}}
 %for scaling see http://tex.stackexchange.com/a/130236/9075
+<% } -%>
+<% if (documentclass == 'ustutt') { -%>
+
+% Zusatzliche Symbole (Text Companion font extension)
+\usepackage{textcomp}
 
 \setkomafont{sectioning}{\normalfont\normalcolor\rmfamily\mdseries}
 \setkomafont{descriptionlabel}{\bfseries}
