--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -12,9 +12,9 @@
 % !TeX spellcheck = en-US
 % LTeX: language=en-US
 % !TeX encoding = utf8
-% !TeX program = <%= latexcompiler %>
+% !TeX program = <%= reallatexcompiler %>
 <% if (requiresShellEscape) { -%>
-% !TeX TXS-program:compile = txs:///<%= latexcompiler %>/[--shell-escape]
+% !TeX TXS-program:compile = txs:///<%= reallatexcompiler %>/[--shell-escape]
 <% } -%>
 % !BIB program = <%= bibtextool %>
 % -*- coding:utf-8 mod:LaTeX -*-
@@ -24,9 +24,10 @@
 %
 %  - easy print out on DIN A4 paper size
 %
-% One can configure a4 vs. letter in the LaTeX installation. So it is configuration dependend, what the paper size will be.
-% This option  present, because the current word template offered by Springer is DIN A4.
-% We accept that DIN A4 cause WTFs at persons not used to A4 in USA.
+% One can configure default page size (a4 vs. letter) in the LaTeX installation.
+% Thus, it is configuration dependend, what the paper size will be.
+% Having "a4paper" option present, the page size is set to A4.
+% Note that the current word template offered by Springer is DIN A4.
 %
 % "runningheads" enables:
 %
