--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -136,7 +136,7 @@
 
 <%- include('microtype.preamble.en.tex', this); -%>
 
-<% if (documentclass == 'ustutt') { %>
+<% if (documentclass == 'ustutt') { -%>
 <%- include('ustutt-pagestyle.preamble.en.tex', this); %>
 <%- include('ustutt-chapterstyle.preamble.en.tex', this); -%>
 
