--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -159,7 +159,7 @@
 
 <%- include('microtype.preamble.de.tex', this); -%>
 
-<% if (documentclass == 'ustutt') { %>
+<% if (documentclass == 'ustutt') { -%>
 <%- include('ustutt-pagestyle.preamble.en.tex', this); %>
 <%- include('ustutt-chapterstyle.preamble.en.tex', this); -%>
 
