--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -143,7 +143,7 @@
 <% } -%>
 \usepackage{graphicx}
 
-<% if (documentclass == 'ustutt') { %>
+<% if (documentclass == 'ustutt') { -%>
 % Base folder, so there is no need to repeat this over and over again.
 \graphicspath{ {figures/} }
 
