--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -231,12 +231,11 @@
 
 <%- include('todos.preamble.en.tex', this); -%>
 
-<%- include('siunitx.preamble.en.tex'); -%>
+<%- include('siunitx.preamble.en.tex'); %>
 <% if (isThesis) { -%>
-
 <%- include('varioref.preamble.de.tex', this); %>
-<% } -%>
 
+<% } -%>
 <%- include('hyperref.preamble.de.tex', this); -%>
 
 <%- include('floats.preamble.en.tex', this); -%>
