--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -207,12 +207,11 @@
 
 <%- include('todos.preamble.en.tex', this); -%>
 
-<%- include('siunitx.preamble.en.tex'); -%>
+<%- include('siunitx.preamble.en.tex'); %>
 <% if (isThesis) { -%>
+<%- include('varioref.preamble.en.tex', this); -%>
 
-<%- include('varioref.preamble.en.tex', this); %>
 <% } -%>
-
 <%- include('hyperref.preamble.en.tex', this); -%>
 
 <%- include('floats.preamble.en.tex', this); -%>
