Fix font size for USTUTT

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -92,7 +92,7 @@
 <% break; case "ustutt": -%>
 
 \documentclass[
-  % fontsize=11pt is the standard
+  fontsize=10pt,
   numbers=noenddot,
   english,  % English as main language; this parameter is passed to other packages (e.g., selnolig in the case of lualatex)
   paper=a5,
