Remove titlepage marking ---- in log

--- a/generators/app/templates/ustutt-titlepage.sty
+++ b/generators/app/templates/ustutt-titlepage.sty
@@ -1,11 +1,6 @@
 % -*- coding:utf-8 mod:LaTeX -*-
 % Title page for Ph.D. thesis at the University of Stuttgart.
 
-\@ifundefined{bhrule}{
-\newcommand\bhrule{\typeout{------------------------------------------------------------------------------}}
-\newcommand\btypeout[1]{\bhrule\typeout{\space #1}\bhrule}
-}{}
-
 \newcommand{\TBlabel}[1]{\textbf{#1}\hfil}
 \newenvironment{TBlist}{%
   \list{}{\labelwidth 35mm \leftmargin 51mm % alt: 35/60 mm
@@ -36,7 +31,7 @@
 \def\@keywords{}
 
 \renewcommand\maketitle{
-  \btypeout{Title Page}
+  \typeout{ustutt-titlepage used for \maketitle}
   %\hypersetup{pdftitle={\@title}}
   %\hypersetup{pdfauthor=\@author}
   %hypersetup{pdfkeywords=\@keywords}
