--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -488,7 +488,7 @@
 \firstexaminer{Prof.~Dr.~Max Mustermann}
 \secondexaminer{Prof.~Dr.~Emma Musterfrau}
 \dateofexamination{unbekannt}
-\placeofbirth{Gebortsort}
+\placeofbirth{Geburtsort}
 \faculty{Fakultät für Informatik, Elektrotechnik und Informationstechnik}
 \department{Institut für Architektur von Anwendungssystemen}
 \maketitle
