--- a/generators/app/templates/ustutt-titlepage.sty
+++ b/generators/app/templates/ustutt-titlepage.sty
@@ -31,7 +31,7 @@
 \def\@keywords{}
 
 \renewcommand\maketitle{
-  \typeout{ustutt-titlepage used for \\maketitle}
+  \typeout{ustutt-titlepage used for \textbackslash{}maketitle}
   %\hypersetup{pdftitle={\@title}}
   %\hypersetup{pdfauthor=\@author}
   %hypersetup{pdfkeywords=\@keywords}
