Add \degree for titlepage

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -456,6 +456,9 @@
 \placeofbirth{Gebortsort}
 \faculty{Fakultät für Informatik, Elektrotechnik und Informationstechnik}
 \department{Institut für Architektur von Anwendungssystemen}
+% Degree - Akademischer Grad gemäß § 1 Abs. 1
+% Default: Dr. rer. nat.
+%\degree{Doktors der Naturwissenschaften (Dr.~rer.~nat.)}
 \maketitle
 
 %\mainmatter
