--- a/generators/app/templates/ustutt-titlepage.sty
+++ b/generators/app/templates/ustutt-titlepage.sty
@@ -19,14 +19,24 @@
 \newcommand*{\placeofbirth}[1]{\def\@placeofbirth{#1\xspace}}
 \def\@placeofbirth{
 	\@latex@warning@no@line{Package `ustutt-titlepage': No \noexpand\placeofbirth given}}
+%
 \newcommand*{\faculty}[1]{\def\@faculty{#1\xspace}}
+% Liste der Fakultäten: http://www.uni-stuttgart.de/ueberblick/organisation/fakultaeten/
 \def\@faculty{
 	\@latex@warning@no@line{Package `ustutt-titlepage': No \noexpand\faculty given}}
+%
+% Degree
+% Akademischer Grad gemäß § 1 Abs. 1
+\newcommand*{\degree}[1]{\def\@degree{#1\xspace}}
+\def\@degree{Doktors der Naturwissenschaften (Dr.~rer.~nat.)\xspace}
+%
 \newcommand*{\department}[1]{\def\@department{#1\xspace}}
 \def\@department{
 	\@latex@warning@no@line{Package `ustutt-titlepage': No \noexpand\department given}}
+%
 \newcommand*{\university}[1]{\def\@university{#1\xspace}}
 \def\@university{Universit\"at Stuttgart\xspace}
+%
 \newcommand*{\keywords}[1]{\def\@keywords{#1}}
 \def\@keywords{}
 
@@ -50,8 +60,9 @@
       {\LARGE \textbf \@title \par}
       \vspace{30pt}
       {Von der \@faculty der \@university
-       zur Erlangung der W\"urde eines Doktors der
-       Naturwissenschaften (Dr.~rer.~nat.) genehmigte Abhandlung \par}
+       zur Erlangung der W\"urde eines
+       \@degree
+       genehmigte Abhandlung \par}
       %\bigskip
       \vspace{25pt}
       {Vorgelegt von \par}
