--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -491,6 +491,9 @@
 \placeofbirth{Geburtsort}
 \faculty{Fakultät für Informatik, Elektrotechnik und Informationstechnik}
 \department{Institut für Architektur von Anwendungssystemen}
+% Degree - Akademischer Grad gemäß § 1 Abs. 1
+% Default: Dr. rer. nat.
+%\degree{Doktors der Naturwissenschaften (Dr.~rer.~nat.)}
 \maketitle
 
 %\mainmatter
