Fix position of institue and year

--- a/generators/app/templates/ustutt-titlepage.sty
+++ b/generators/app/templates/ustutt-titlepage.sty
@@ -75,7 +75,7 @@
       	&\\
       	\textbf{Tag der m\"undlichen Pr\"ufung:} & \@dateofexamination
       \end{tabular}
-      \vspace{30pt}\par
+      \vspace{30pt}\par\vfill
       {\@department \par}
 	  \vspace{10pt}
 	  {2016}
