Better spacing - and try to move the department even more down

--- a/generators/app/templates/ustutt-titlepage.sty
+++ b/generators/app/templates/ustutt-titlepage.sty
@@ -47,6 +47,7 @@
   %hypersetup{pdfkeywords=\@keywords}
   \thispagestyle{empty}
   \begin{titlepage}
+    \begin{spacing}{1.3}
     \setcounter{footnote}{0}
     %\null\vfil
     %\vskip 60\p@
@@ -63,7 +64,9 @@
       %\bigskip
       \vspace{25pt}
       {Vorgelegt von \par}
+      \vspace{.8ex}
       {\large \@author \par}
+      \vspace{.8ex}
       {aus \@placeofbirth \par}
       \vspace{30pt}
       \begin{tabular}{ll}
@@ -76,11 +79,8 @@
       {\@department \par}
 	  \vspace{10pt}
 	  {2016}
-      \bigskip
     \end{center}
-    \par
-    \@thanks
-    \vfil\null
+    \end{spacing}
   \end{titlepage}
   \setcounter{footnote}{0}
   \global\let\thanks\relax
