Replace "blindtext" by "lipsum"

--- a/generators/app/templates/floatflt.example.en.tex
+++ b/generators/app/templates/floatflt.example.en.tex
@@ -8,6 +8,6 @@ One can also have pictures floating inside text:
 \includegraphics[width=.29\linewidth]{example-image-a}
 \caption{A floating figure}
 \end{floatingfigure}
-\blindtext[2]
+\lipsum[2]
 <%- eexample %>
 <% } -%>
