--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -882,8 +882,8 @@ Der Abschnitt kann je nach Kontext auch an anderer Stelle stehen.
 Winery~\cite{Winery} is a graphical \textcomment{modeling}{modeling with one ``l'', because of AE} tool.
 The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
 <% } -%>
-
 <% if (examples) { -%>
+
 <%= heading1 %>{LaTeX Hinweise}
 \label{sec:latexhints}
 
@@ -994,7 +994,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 <%= heading1 %>{Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum}
 \label{chap:label}
 %Um die Fußzeile zu demonstrieren
-\blindtext[3]
+\lipsum[3]
 
 \resetchapterfooter
 
@@ -1010,7 +1010,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 \section{Section}
 \section{Section}
 \section{Section}
-\blindtext
+\lipsum
 \section{Section}
 \section{Section}
 \section{Section}
@@ -1024,7 +1024,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 \section{Section}
 \subsection{Subsection}
 \label{ssec:example}
-\blindtext
+\lipsum
 \subsection{Subsection}
 \subsection{Subsection}
 \subsection{Subsection}
