--- a/generators/app/templates/ustutt-todo.tex
+++ b/generators/app/templates/ustutt-todo.tex
@@ -5,9 +5,6 @@
 
 \usepackage{layout} % use with \layout, print page dimensions
 
-\usepackage{blindtext}
-
-
 \section{Demonstration von refenums}
 \label{sec:method}
 %See http://mirror.ctan.org/macros/latex/contrib/refenums/demo.tex for a full usage guide
@@ -16,10 +13,10 @@
 
 \defRefEnum[subsection]{Schritt}{Anforderungsanalyse}{rqa}
 \label{sec:rqa}
-\blindtext
+\lipsum
 
 \defRefEnum[subsection]{Schritt}{Spezifikation}{spec}
-\blindtext
+\lipsum
 
 \subsection{Zusammenfassung}
 In \cref{sec:method} wurde zuerst \refEnumFull{Schritt}{rqa} vorgestellt.
