--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -842,8 +842,8 @@ Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:out
 Winery~\cite{Winery} is a graphical \textcomment{modeling}{modeling with one ``l'', because of AE} tool.
 The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
 <% } -%>
-
 <% if (examples) { -%>
+
 <%= heading1 %>{LaTeX Hints}
 \label{sec:latexhints}
 
@@ -957,7 +957,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 <%= heading1 %>{Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum}
 \label{chap:label}
 %Um die Fußzeile zu demonstrieren
-\blindtext[3]
+\lipsum[3]
 
 \resetchapterfooter
 
@@ -973,7 +973,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 \section{Section}
 \section{Section}
 \section{Section}
-\blindtext
+\lipsum
 \section{Section}
 \section{Section}
 \section{Section}
@@ -987,7 +987,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 \section{Section}
 \subsection{Subsection}
 \label{ssec:example}
-\blindtext
+\lipsum
 \subsection{Subsection}
 \subsection{Subsection}
 \subsection{Subsection}
