--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -359,6 +359,9 @@
 
 <% } -%>
 \begin{document}
+<% if (isThesis) { -%>
+\setstretch{1.2}
+<% } -%>
 <% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { -%>
 <% if (latexcompiler == "both") { -%>
 \ifluatex
