--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -335,6 +335,9 @@
 <% } -%>
 <% if (isThesis) { %><%- include('thesis-additions.en.tex', this); %><% } -%>
 \begin{document}
+<% if (isThesis) { -%>
+\setstretch{1.2}
+<% } -%>
 <% switch (documentclass) { case "lncs": -%>
 
 \title{Paper Title}
