--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -86,7 +86,7 @@
 <% break; case "ustutt": -%>
 
 \documentclass[
-  % fontsize=11pt is the standard
+  fontsize=10pt
   numbers=noenddot,
   english,  % English as main language; this parameter is passed to other packages (e.g., selnolig in the case of lualatex)
   paper=a5,
@@ -136,14 +136,14 @@
 
 <%- include('microtype.preamble.en.tex', this); -%>
 
-<% if (documentclass == 'ustutt') { %>
+<% if (documentclass == 'ustutt') { -%>
 <%- include('ustutt-pagestyle.preamble.en.tex', this); %>
 <%- include('ustutt-chapterstyle.preamble.en.tex', this); -%>
 
 <% } -%>
 \usepackage{graphicx}
 
-<% if (documentclass == 'ustutt') { %>
+<% if (documentclass == 'ustutt') { -%>
 % Base folder, so there is no need to repeat this over and over again.
 \graphicspath{ {figures/} }
 
@@ -207,12 +207,11 @@
 
 <%- include('todos.preamble.en.tex', this); -%>
 
-<%- include('siunitx.preamble.en.tex'); -%>
+<%- include('siunitx.preamble.en.tex'); %>
 <% if (isThesis) { -%>
+<%- include('varioref.preamble.en.tex', this); -%>
 
-<%- include('varioref.preamble.en.tex', this); %>
 <% } -%>
-
 <%- include('hyperref.preamble.en.tex', this); -%>
 
 <%- include('floats.preamble.en.tex', this); -%>
@@ -336,6 +335,9 @@
 <% } -%>
 <% if (isThesis) { %><%- include('thesis-additions.en.tex', this); %><% } -%>
 \begin{document}
+<% if (isThesis) { -%>
+\setstretch{1.2}
+<% } -%>
 <% switch (documentclass) { case "lncs": -%>
 
 \title{Paper Title}
@@ -457,6 +459,9 @@
 \placeofbirth{Gebortsort}
 \faculty{Fakultät für Informatik, Elektrotechnik und Informationstechnik}
 \department{Institut für Architektur von Anwendungssystemen}
+% Degree - Akademischer Grad gemäß § 1 Abs. 1
+% Default: Dr. rer. nat.
+%\degree{Doktors der Naturwissenschaften (Dr.~rer.~nat.)}
 \maketitle
 
 %\mainmatter
@@ -840,8 +845,8 @@ Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:out
 Winery~\cite{Winery} is a graphical \textcomment{modeling}{modeling with one ``l'', because of AE} tool.
 The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
 <% } -%>
-
 <% if (examples) { -%>
+
 <%= heading1 %>{LaTeX Hints}
 \label{sec:latexhints}
 
@@ -955,7 +960,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 <%= heading1 %>{Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum}
 \label{chap:label}
 %Um die Fußzeile zu demonstrieren
-\blindtext[3]
+\lipsum[3]
 
 \resetchapterfooter
 
@@ -971,7 +976,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 \section{Section}
 \section{Section}
 \section{Section}
-\blindtext
+\lipsum
 \section{Section}
 \section{Section}
 \section{Section}
@@ -985,7 +990,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 \section{Section}
 \subsection{Subsection}
 \label{ssec:example}
-\blindtext
+\lipsum
 \subsection{Subsection}
 \subsection{Subsection}
 \subsection{Subsection}
