--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -119,6 +119,7 @@
 <% if (documentclass == 'lncs' && listings == 'listings+minted') { -%>
 
 %\renewcommand{\lstlistingname}{List.}
+\renewcommand{\lstlistlistingname}{Verzeichnis der Listings}
 
 % Fix counter wie bei https://tex.stackexchange.com/a/28334/9075 beschrieben
 \usepackage{chngcntr}
