--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -361,6 +361,7 @@
 \begin{document}
 <% if (isThesis) { -%>
 \setstretch{1.2}
+\raggedbottom     % Variable Seitenhoehen zulassen
 <% } -%>
 <% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { -%>
 <% if (latexcompiler == "both") { -%>
