--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -337,6 +337,7 @@
 \begin{document}
 <% if (isThesis) { -%>
 \setstretch{1.2}
+\raggedbottom
 <% } -%>
 <% switch (documentclass) { case "lncs": -%>
 
