--- a/generators/app/templates/subfig.preamble.en.tex
+++ b/generators/app/templates/subfig.preamble.en.tex
@@ -6,7 +6,8 @@
 
 % Alternative for making subfigures:
 % Part of the caption package. See http://www.ctan.org/pkg/caption
+% Ersetzt die Pakete subfigure und subfig - siehe https://tex.stackexchange.com/a/13778/9075
 %
 % (subfigure is outdated. subfig is maintained, but subcaption is better)
 % See: http://tex.stackexchange.com/questions/13625/subcaption-vs-subfig-best-package-for-referencing-a-subfigure
-%\usepackage{subcaption}
+%\usepackage[hypcap=true]{subcaption}
