Port things of scientific-thesis

--- a/generators/app/templates/babel.preamble.de.tex
+++ b/generators/app/templates/babel.preamble.de.tex
@@ -8,3 +8,10 @@
 % Ermögliche die Benutzung von "= als Trennstriche
 \addto\extrasenglish{\languageshorthands{ngerman}\useshorthands{"}}
 <% } -%>
+<% if (documentclass == "scientific-thesis") { %->
+
+% Ein "abstract" ist eine "Kurzfassung", keine "Zusammenfassung"
+\addto\captionsngerman{%
+  \renewcommand\abstractname{Kurzfassung}%
+}
+<% } -%>
