--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -253,6 +253,10 @@
 <% } -%>
 % Allows for defining commands that don't eat spaces.
 \usepackage{xspace}
+% Adds compatibility to \xspace und \enquote kompatibel
+\makeatletter
+\xspaceaddexceptions{\grqq \grq \csq@qclose@i \} }
+\makeatother
 
 \newcommand{\eg}{e.g.,\ }
 \newcommand{\ie}{i.e.,\ }
