--- a/generators/app/templates/babel.preamble.de.tex
+++ b/generators/app/templates/babel.preamble.de.tex
@@ -8,7 +8,7 @@
 % Ermögliche die Benutzung von "= als Trennstriche
 \addto\extrasenglish{\languageshorthands{ngerman}\useshorthands{"}}
 <% } -%>
-<% if (documentclass == "scientific-thesis") { %->
+<% if (documentclass == "scientific-thesis") { -%>
 
 % Ein "abstract" ist eine "Kurzfassung", keine "Zusammenfassung"
 \addto\captionsngerman{%
