Fix comment for xcolors

--- a/generators/app/templates/xcolor.preamble.de.tex
+++ b/generators/app/templates/xcolor.preamble.de.tex
@@ -1,8 +1,8 @@
 <%# Required for package pdfcomment later -%>
 \usepackage[dvipsnames, table]{xcolor}
-% Für die finale Fassung empfohlen:
-%\usepackage[dvipsnames, table, gray]{xcolor}
 <% if (documentclass == "ustutt") { -%>
+% Für die finale Druckfassung empfohlen:
+%\usepackage[dvipsnames, table, gray]{xcolor}
 
 % Farben fuer die Links im PDF
 \definecolor{pdfurlcolor}{rgb}{0,0,0.6}
