--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -214,7 +214,7 @@
 
 <%- include('todos.preamble.en.tex', this); -%>
 
-<%- include('siunitx.preamble.en.tex'); %>
+<%- include('siunitx.preamble.de.tex'); %>
 <% if (isThesis) { -%>
 <%- include('varioref.preamble.de.tex', this); %>
 
