Fix indent (and missing ,)

--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -46,7 +46,7 @@
   %
   extendedchars=true,
   %
-  <% if (documentclass == "ustutt") { -%>
+<% if (documentclass == "ustutt") { -%>
   basicstyle=\small\ttfamily,
   stepnumber=2,               % Abstand zwischen den Zeilennummern
   numbersep=5pt,              % Abstand der Nummern zum Text
@@ -57,7 +57,7 @@
 %        stringstyle=\color{stringcolor}, % Farbe der Strings, stringcolor derzeit undefiniert
   showspaces=false,           % Leerzeichen anzeigen ?
   showtabs=false,             % Tabs anzeigen ?
-  showstringspaces=false      % Leerzeichen in Strings anzeigen ?
+  showstringspaces=false,     % Leerzeichen in Strings anzeigen ?
 <% } else { -%>
   basicstyle=\footnotesize\ttfamily,
 <% } -%>
