--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -252,7 +252,7 @@
 <% } -%>
 % Allows for defining commands that don't eat spaces.
 \usepackage{xspace}
-% Adds compatibility to \xspace und \enquote kompatibel
+% Adds compatibility to \xspace und \enquote
 \makeatletter
 \xspaceaddexceptions{\grqq \grq \csq@qclose@i \} }
 \makeatother
